# electronic-prescription-service-api

./: ..envrc.swp  .dockerignore  .editorconfig  .env  .flake8  .gitallowed  .gitattributes  .gitignore  .gitleaksignore  .gitmodules  .grype.yaml  .pre-commit-config.yaml  .swp  .tool-versions  .tool-versions.asdf  .trivyignore.yaml  CHANGELOG.md  Dockerfile.api  Dockerfile.epsat  Gemfile  LICENSE  Makefile  README.md  SECURITY.md  _config.yml  azure-pipelines.yml  cdk.context.json  cdk.json  cucumber.js  dev.html  ecs-deploy-prod.yml  ecs-proxies-containers.yml  ecs-proxies-deploy-internal-qa.yml  ecs-proxies-deploy-prod.yml  ecs-proxies-deploy.yml  electronic-prescription-service-api.code-workspace  epsat.ecs-proxies-containers.yml  eslint.config.mjs  failures.tmp  ignored_security_issues.json  (+21 more)
ci/: .gitignore  .pre-commit-config.yaml  README.md  get_oidc_thumbprint.sh  nrlf.sh  prescriptions.sh  pyproject.toml
ci/packer/: template.json
ci/scripts/: _aws.sh  _constants.sh  _make.sh  _terraform.sh  clear_runners.py
ci/terraform/: .terraform.lock.hcl  cloudwatch.tf  data.tf  ec2.tf  iam__ci-pipeline.tf  iam__prod-deploy.tf  iam__runner.tf  kms.tf  launch_config_user_data.sh.tpl  locals.tf  main.tf  oidc.tf  s3.tf  secrets.tf  session-manager.tf  vars.tf  vpc.tf
ci/terraform/etc/: mgmt.tfvars
ci/terraform/nat-gateway/: main.tf  outputs.tf  vars.tf
ci/terraform/role-policy/: main.tf  vars.tf
ci/terraform/vpc-subnets/: main.tf  outputs.tf  vars.tf
specification-release/: apigee_client.py  pyproject.toml  spec_uploader.py
tool/: .dockerignore  Dockerfile-Site  Dockerfile-Store  Makefile  README.md  docker-compose.yml  ecs-proxies-containers.yml  ecs-proxies-deploy-int.yml  ecs-proxies-deploy-internal-dev-sandbox.yml  ecs-proxies-deploy-internal-dev.yml  ecs-proxies-deploy-internal-qa.yml  ecs-proxies-deploy-sandbox.yml  ecs-proxies-deploy.yml  manifest_template.yml  package-lock.json  package.json  pyproject.toml  test_pack.xlsx  tsconfig.json  tsconfig.server.json  webpack.config.js
tool/azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  azure-release-template.yml  project.yml
tool/client/: index.html  index.ts
tool/client/data/: prescriptions.ts
tool/client/importers/: test-pack.ts
tool/client/models/: communication-request.ts  dispense-claim.ts  extension.ts  index.ts  medication-dispense.ts  medication-request.ts  provenance.ts  task.ts
tool/client/transformers/: cancellation.ts  common.ts  dispense-claim.ts
tool/client/ui/: formatters.ts
tool/e2e-tests/: .eslintrc  README.md  all.test.ts  browser-drivers.ts  cancelPrescription.test.ts  cancelPrescription.ts  createPrescription.test.ts  createPrescription.ts  helpers.ts  jest.config.js  live.test.ts  locators.ts  package-lock.json  package.json  tsconfig.json
tool/e2e-tests/auth/: login.ts  loginUnattended.ts  logout.ts
tool/e2e-tests/dispense/: amendDispense.ts  claimAmendPrescription.ts  claimPrescription.ts  dispensePrescription.ts  releasePrescription.ts  returnPrescription.ts  verifyPrescription.ts  withdrawPrescription.ts
tool/e2e-tests/dose-to-text/: doseToText.ts
tool/e2e-tests/end-state/: canceledState.ts  claimedState.ts
tool/e2e-tests/enums/: FileUploadType.enum.ts
tool/e2e-tests/interfaces/: FileUploadInfo.interface.ts
tool/e2e-tests/messages/: XML tag Dosage Instructions.json
tool/e2e-tests/prescribe/: cancelPrescription.ts  createPrescription.ts  editPrescription.ts  prescriptionPagination.ts  sendPrescription.ts  sendPrescriptionsFromTestPack.ts
tool/e2e-tests/test-packs/: Supplier 1 Test Pack.xlsx  (+19 more)
tool/scripts/: calculate_version.py
tool/server/: api.py  auth.py  client.py  cookies.py  routes.py  store.py
tool/server_javascript/: app.ts
tool/server_python/: app.py  helpers.py  store.py
tool/site/: .dockerignore  Dockerfile  Dockerfile-Hapi  Dockerfile-Site  docker-entrypoint.sh  requirements.txt
tool/store/: Dockerfile  docker-entrypoint.sh  healthcheck.go
tool/test-packs/: homecare_300_acute_nominated.xlsx  homecare_30_acute_nominated.xlsx  homecare_90_acute_nominated.xlsx  homecare_all_types.xlsx
(+2817 files in other folders)
