[project]
python = "^3.13"
name = "electronic-prescription-service-api"

[tool.poetry]
name = "electronic-prescription-service-api"
version = "0.0.1-alpha"
description = "Electronic Prescription Service API Definitions"
license = "MIT"
authors = [
    "EPS Team <eps@team.team>"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/electronic-prescription-service-api"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
semver = "^3.0.4"
gitpython = "^3.1.45"
requests = "^2.32.4"
argparse = "^1.4.0"
pre-commit = "^4.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^7.3.0"
black = "^25.12"
pip-licenses = "^5.5.0"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
