[project]
name = "electronic-prescription-service-api"
description = "Electronic Prescription Service API Definitions"
readme = "README.md"
license = "MIT"
version = "0.0.1-alpha"
requires-python = "^3.13"
authors = [
    { name = "EPS Team", email = "eps@team.team" }
]
dependencies = [
    "semver (>=3.0.4,<4.0.0)",
    "gitpython (>=3.1.46,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[project.urls]
repository = "https://github.com/NHSDigital/electronic-prescription-service-api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^26.1"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
