[project]
python = "^3.13"
name = "electronic-prescription-service-api"

[tool.poetry]
name = "electronic-prescription-service-api"
version = "0.0.1-alpha"
description = "Electronic Prescription Service API Definitions"
license = "MIT"
authors = [
    "EPS Team <eps@team.team>"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/electronic-prescription-service-api"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
semver = "^3.0.4"
requests = "^2.33.1"
argparse = "^1.4.0"
pre-commit = "^4.5.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^26.3"
pytest = "^9.0.3"
pytest-cov = "^7.1.0"

[tool.poetry.group.create_prescription.dependencies]
boto3 = "^1.42.88"
aws-lambda-powertools = "^3.27.0"

[tool.poetry.scripts]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
