[tool.poetry]
name = "prescriptions-ci"
version = "1.0.0"
description = "Github CI setup for Prescriptions project"
authors = ["NHS Digital"]
license = "MIT"
readme = "README.md"
packages = [{include = "prescriptions_ci"}]

[tool.poetry.dependencies]
python = "^3.9"
awscli = "^1.27.7"
requests = "^2.28.1"
boto3 = "^1.26.7"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
