[tool.poetry]
name = "eps-spec-release"
version = "0.1.0"
description = ""
authors = ["Alex McCormick <alex.mccormick@infintyworks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
docopt = "^0.6.2"
flake8 = "^3.7.9"
GitPython = "^3.1.0"
semver = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"