[project]
python = "^3.8"


[tool.poetry]
name = "epsat"
version = "0.0.1-alpha"
description = "EPS API Tool"

license = "MIT"

authors = [
    #TODO add authors
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/electronic-prescription-service-api-tool"
homepage = ""

keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
semver = "^2.9.0"
gitpython = "^3.0.5"


[tool.poetry.dev-dependencies]


[tool.poetry.scripts]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
